Complete inspection plan

--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -1,3 +1,15 @@
+<p-confirmDialog
+  [style]="{width: '50vw'}"
+  acceptLabel="Xác nhận"
+  rejectLabel="Hủy bỏ"
+  key="confirmDeleteRemainingInspector"
+></p-confirmDialog>
+<p-confirmDialog
+  [style]="{width: '50vw'}"
+  acceptLabel="Xác nhận"
+  rejectLabel="Hủy bỏ"
+  key="confirmDeleteInspector"
+></p-confirmDialog>
 <div *ngIf="selectedInspectors?.length == 0 && listEditable; else inspectorList" class="text-center">
   <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
 </div>
