--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -72,8 +72,7 @@
           <label>Email</label>
         </div>
         <div>
-          <input type="text" value="{{this.currentUser.email}}" class="form-control" readonly>
-
+          <p>{{this.currentUser.email}}</p>
         </div>
 
         <div>
@@ -135,8 +134,19 @@
 
     </div>
   </div>
+  <button class="btn btn-primary"
+          (click)="confirm()"
+          *ngIf="isUpdate"
+  >Lưu</button>
 <button class="btn btn-primary"
         (click)="onUpdate()"
+        *ngIf="!isUpdate"
 >Cập nhật</button>
-<button class="btn btn-primary">Thay mật khẩu</button>
+<button class="btn btn-primary"     *ngIf="!isUpdate">Thay mật khẩu</button>
+  <button class="btn btn-primary"
+          (click)="onUpdate()"
+          *ngIf="isUpdate">Quay lại</button>
+
 </p-dialog>
+<p-toast position="top-right" key="error"></p-toast>
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
