--- a/src/app/components/user-profile/change-password/change-password.component.html
+++ b/src/app/components/user-profile/change-password/change-password.component.html
@@ -1,6 +1,6 @@
 <p-dialog header="Thay đổi mật khẩu"
           [(visible)]="visible"
-          [style]="{width: '30vw', height: '22vw'}"
+          [style]="{width: '35vw', height: '30vw'}"
           (onHide)="resetVisible()"
           [modal]="true"
 >
@@ -11,6 +11,7 @@
     </div>
     <div>
       <input type="password" formControlName="password" class="form-control">
+      <span class="p-error" *ngIf="isError('password', 'whitespace') || isBlank('password')">Mục này không được trống</span>
     </div>
 
     <div>
@@ -18,6 +19,8 @@
     </div>
     <div>
       <input type="password" formControlName="changePassword" class="form-control">
+      <span class="p-error" *ngIf="isError('changePassword', 'weakPassword') || isBlank('changePassword')">Mật khẩu phải có ít nhất 8 ký tự, 1 ký tự đặc biệt, 1 chữ viết hoa và 1 con số</span>
+
     </div>
 
     <div>
@@ -25,11 +28,15 @@
     </div>
     <div>
       <input type="password" formControlName="confirmPassword" class="form-control">
+      <span class="p-error" *ngIf="(form.hasError('passwordMismatch') && form.get('confirmPassword')?.dirty) || isBlank('confirmPassword')">
+        Mật khẩu không trùng
+      </span>
+
     </div>
 
   </div>
 
 </form>
-  <button class="btn btn-primary">Thay mật khẩu</button>
+  <button class="btn btn-primary" (click)="onSubmit()">Thay mật khẩu</button>
 
 </p-dialog>
