--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -44,7 +44,7 @@
         border-radius: 8px;
         border: solid 1px $primary;
         transition: all 0.5s ease;
-        margin-right: 20px;
+        // margin-right: 20px;
         &:hover {
             background-color: $primary-hover;
             border-color: $primary-hover;
@@ -58,6 +58,9 @@
         padding: 0;
         margin-bottom: 0;
     }
+    // .p-dialog-footer {
+    //     text-align: left;
+    // }
 }
 .font-weight-bold {
     font-weight: 500;
@@ -224,4 +227,39 @@ ul {
 }
 ul {
     margin-bottom: 0;
+}
+.children {
+    height: 40px;
+}
+.row {
+    margin: 0;
+}
+.tab {
+    .p-button {
+        font-size: 14px;
+        color: black;
+        background-color: #f8f9fa;
+        border-radius: 8px;
+        border: solid 1px #f8f9fa;
+        transition: all 0.5s ease;
+        &:hover {
+            background-color: #b4b4b4;
+        }
+    }
+    .active {
+        color: white;
+        background-color: $primary;
+    }
+}
+.approvement {
+    font-size: 14px;
+}
+.width-400 {
+    width: 400px;
+}
+.width-200 {
+    width: 200px;
+}
+.tree-table {
+    font-size: 16px;
 }
