--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -6,7 +6,10 @@
     </span>
   </div>
   <div class="col-md-6 d-flex flex-row justify-content-end align-items-center top-nav">
-    <app-notification-list [notificationItems]="notificationListDtos"></app-notification-list>
+    <app-notification-list
+      [notificationItems]="notificationListDtos"
+      [unseenNotificationDtos]="unseenNotificationListDtos"
+    ></app-notification-list>
     <a>
       <i class="bi bi-person-circle"></i>
     </a>
