--- a/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.scss
+++ b/src/app/features/post-login/inspection-plan-list/update-inspection-plan/update-inspection-plan.component.scss
@@ -4,6 +4,19 @@
   font-size: 16px;
 }
 
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
 ::ng-deep .p-dropdown{
   width: 100%;
   border-radius: 8px;
