fix change password

--- a/src/app/components/user-profile/change-password/change-password.component.html
+++ b/src/app/components/user-profile/change-password/change-password.component.html
@@ -37,6 +37,7 @@
   </div>
 
 </form>
-  <button class="btn btn-primary" (click)="onSubmit()">Thay mật khẩu</button>
+  <button class="btn btn-primary" (click)="confirm()">Thay mật khẩu</button>
 
 </p-dialog>
+<p-toast key="error" position="top-right"></p-toast>
