--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -652,7 +652,7 @@
           <i class="bi bi-file-earmark-check-fill file-icon"></i>
         </ng-container>
         <ng-container *ngIf="!rowData.node.task">
-          <i class="bi bi-folder-fill folder-icon"></i>
+          <i class="bi bi-file-earmark-text file-icon"></i>
         </ng-container>
         <span>
           {{ rowData.node.assignmentName }}
