--- a/src/app/components/notification-list/notification-list-unseen/notification-list-unseen.component.html
+++ b/src/app/components/notification-list/notification-list-unseen/notification-list-unseen.component.html
@@ -1,10 +1,18 @@
-<a class="notification-item p-3 mx-1" *ngFor="let unseenNotification of unseenNotificationDtos; let i = index" (click)="handleCLickNotificationItem(i)">
-  <div class="notification-info">
-    <p class="mb-1 fw-bold">{{unseenNotification.notificationType}}</p>
-    <p class="mb-1">{{unseenNotification.message}}</p>
-    <p class="mb-1">{{unseenNotification.createdOn  | date : "dd/MM/yyyy | hh:mm"}}</p>
+<div *ngIf="unseenNotificationDtos.length > 0; else notificationEmpty">
+  <a class="notification-item p-3 mx-1" *ngFor="let unseenNotification of unseenNotificationDtos; let i = index"
+     (click)="handleCLickNotificationItem(i)">
+    <div class="notification-info">
+      <p class="mb-1 fw-bold">{{unseenNotification.notificationType}}</p>
+      <p class="mb-1">{{unseenNotification.message}}</p>
+      <p class="mb-1">{{unseenNotification.createdOn  | date : "dd/MM/yyyy | hh:mm"}}</p>
+    </div>
+    <div class="" *ngIf="!unseenNotification.isSeen">
+      <i class="bi bi-circle-fill"></i>
+    </div>
+  </a>
+</div>
+<ng-template #notificationEmpty>
+  <div class="text-center notification-item-empty my-3">
+    <p>Không có thông báo</p>
   </div>
-  <div class="" *ngIf="!unseenNotification.isSeen">
-    <i class="bi bi-circle-fill"></i>
-  </div>
-</a>
+</ng-template>
