add selection for inspection plan list

--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -251,7 +251,7 @@
           </button>
         </div>
       </div>
-<ng-container *ngIf="lastDocs.departmentDocument">
+<ng-container *ngIf="lastDocs?.departmentDocument">
   <div
           *ngIf="schoolinitiationplan?.status.statusId != 6"
           class="plan-file-item d-flex"
