--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -1,121 +1,131 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
+
 <h4>Danh sách kế hoạch thanh tra</h4>
 
-<div class="card">
-  <p-table
-    #dt
-    [value]="inspectionPlanList"
-    dataKey="id"
-    [rowHover]="true"
-    [rows]="7"
-    [showCurrentPageReport]="true"
-    [rowsPerPageOptions]="[7, 10, 15]"
-    [paginator]="true"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [filterDelay]="0"
-    [globalFilterFields]="['docName', 'inspectorNum']"
-  >
-    <ng-template pTemplate="caption">
-      <div class="table-header">
-        <span class="p-input-icon-left">
-          <i class="fa-solid fa-search"></i>
-          <input
-            pInputText
-            type="text"
-            (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-            placeholder="Tìm kiếm"
-          />
-        </span>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
-        <th class="th-id">
-          <div>ID</div>
-        </th>
-        <th pSortableColumn="planName">
-          <div>
-            Tên
-            <p-sortIcon field="planName"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="schoolName">
-          <div>
-            Trường
-            <p-sortIcon field="schoolName"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="inspectorChief">
-          <div>
-            Thủ trưởng
-            <p-sortIcon field="inspectorChief"></p-sortIcon>
-          </div>
-        </th>
-        <th pSortableColumn="createdBy">
-          <div>
-            Người tạo
-            <p-sortIcon field="createdBy"></p-sortIcon>
-          </div>
-        </th>
-        <th class="th-small" pSortableColumn="createdDate">
-          <div>
-            Ngày đăng
-            <p-sortIcon field="createdDate"></p-sortIcon>
-          </div>
-        </th>
-        <th class="th-small"></th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-inspectionplan>
-      <tr class="p-selectable-row">
-        <td>
-          <span class="p-column-title">Id</span>
-          <!-- {{ issue.id }} -->
-        </td>
-        <td>
-          <span class="p-column-title">Tên văn bản</span>
-          <!-- {{ issue.docName }} -->
-        </td>
-        <td class="td-createdby">
-          <span class="p-column-title">Người đăng</span>
-          <!-- {{ issue.createdBy }} -->
-        </td>
-        <td>
-          <span class="p-column-title">Date</span>
-          <!-- {{ issue.createdDate | date : "MM/dd/yyyy" }} -->
-        </td>
-        <!-- <td>
-          <span class="p-column-title">Số lượng văn bản</span>
-          {{ issue.docNum }}
-        </td> -->
-        <td>
-          <span class="p-column-title">Số lượng BKTNB</span>
-          <!-- {{ issue.inspectorNum }} -->
-        </td>
-        <td
-          style="text-align: center"
-          class="d-flex td-action justify-content-center align-items-center"
+<p-toast key="error" position="top-right"></p-toast>
+<div class="row mt-4">
+  <div class="form-group col-md-7" *ngIf="!advanceSearch">
+    <input type="text"
+           name="globalSearch"
+           id="globalSearch"
+           class="form-control small-input fontAwesome mb-3"
+           [(ngModel)]="planName"
+           (keyup)="loadDocuments()"
+           placeholder="&#xF002; Tra cứu nhanh theo tên kế hoạch"
+    >
+  </div>
+  <div *ngIf="advanceSearch" class="col-md-10">
+    <p-dropdown [options]="issueDropDowns"
+                [(ngModel)]="currentIssueSelected"
+                optionLabel="issueName" [filter]="true"
+                filterBy="issueName"
+                [showClear]="true"
+                placeholder="Chọn 1 kế hoạch kiểm tra"
+                (onChange)="loadDocuments()"
+    >
+      <ng-template pTemplate="selectedItem">
+        <div class="flex align-items-center gap-2" *ngIf="currentIssueSelected">
+          <div>{{ currentIssueSelected.issueName }}</div>
+        </div>
+      </ng-template>
+      <ng-template let-issue pTemplate="item">
+        <div class="flex align-items-center gap-2">
+          <div>{{ issue.issueName }}</div>
+        </div>
+      </ng-template>
+    </p-dropdown>
+    <p-dropdown [options]="schools"
+                [(ngModel)]="selectedSchool"
+                optionLabel="schoolName" [filter]="true"
+                filterBy="schoolName"
+                [showClear]="true"
+                placeholder="Chọn 1 trường"
+                (onChange)="loadDocuments()"
+
+    >
+      <ng-template pTemplate="selectedItem">
+        <div class="flex align-items-center gap-2" *ngIf="selectedSchool">
+          <div>{{ selectedSchool.schoolName }}</div>
+        </div>
+      </ng-template>
+      <ng-template let-school pTemplate="item">
+        <div class="flex align-items-center gap-2">
+          <div>{{ school.schoolName }}</div>
+        </div>
+      </ng-template>
+    </p-dropdown>
+    <p-dropdown
+      placeholder="Chọn 1 trạng thái"
+      [options]="statuses"
+      [(ngModel)]="selectedStatus"
+      [showClear]="true"
+      (onChange)="loadDocuments()"
+
+    ></p-dropdown>
+    <div class="row mt-3">
+
+      <div class="col-md-5">
+        <label>Tên kế hoạch</label>
+        <input class="form-control"
+               [(ngModel)]="planName"
+               name="planName"
+               id="planName"
+               (keyup)="loadDocuments()"
+               placeholder="(VD): Kế hoạch của Trường Mầm Non Ánh Sao"
         >
-          <div
-            class="action-item d-flex justify-content-center align-items-center mx-2"
-          >
-            <i
-              class="fa-solid fa-circle-info"
-            ></i>
-          </div>
-          <div
-            class="action-item d-flex justify-content-center align-items-center mx-2"
-          >
-            <i
-              class="fa-solid fa-pencil"
-            ></i>
-          </div>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="8">Không tìm thấy kế hoạch nào</td>
-      </tr>
-    </ng-template>
-  </p-table>
+      </div>
+      <div class="col-md-3">
+        <label>Ngày khởi tạo bắt đầu</label>
+        <input class="form-control"
+               [(ngModel)]="creationStartDateTime"
+               name="startDateTime"
+               id="startDateTime"
+               type="date"
+               (change)="loadDocuments()"
+
+        >
+      </div>
+      <div class="col-md-3">
+        <label>Ngày khởi tạo kết thúc</label>
+        <input class="form-control"
+               [(ngModel)]="creationEndDateTime"
+               name="endDateTime"
+               id="endDateTime"
+               type="date"
+               (change)="loadDocuments()"
+
+        >
+        <span class="p-error" *ngIf="creationDateError">Ngày kết thúc không thể nhỏ hơn ngày bắt đầu</span>
+
+      </div>
+      <div class="col-md-5">
+
+      </div>
+      <div class="col-md-3">
+
+        <label>Ngày deadline bắt đầu</label>
+        <input class="form-control"
+               [(ngModel)]="deadlineStartDateTime"
+               type="date"
+               (change)="loadDocuments()"
+
+        >
+      </div>
+      <div class="col-md-3">
+        <label>Ngày deadline kết thúc</label>
+        <input class="form-control"
+               [(ngModel)]="deadlineEndDateTime"
+               type="date"
+               (change)="loadDocuments()"
+
+        >
+        <span class="p-error" *ngIf="deadlineDateError">Ngày kết thúc không thể nhỏ hơn ngày bắt đầu</span>
+
+      </div>
+
+    </div>
+  </div>
+  <div class="col-md-2">
+    <button (click)="onAdvanceSearch()" class="btn btn-primary">{{advanceSearchButtonText}}</button>
+  </div>
 </div>
