fix toast before approve

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -621,6 +621,7 @@
 
 <h4>Danh sách công việc</h4>
 <p-treeTable
+  #treeTable
   [value]="assignments"
   [scrollable]="true"
   [style]="{ 'min-width': '50rem' }"
